--- a/src/SCSS/main.scss
+++ b/src/SCSS/main.scss
@@ -175,7 +175,7 @@ body{
 
     .btn_close {
       display: flex;
-      justify-content: end;
+      justify-content: flex-end;
 
         button{
           border-radius: 5px;
